--- a/src/LogicEngine.Lib.Test/LogicEngine.Lib.Test.csproj
+++ b/src/LogicEngine.Lib.Test/LogicEngine.Lib.Test.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleBaseTest.cs" />
     <Compile Include="LogicEngineResolverTest.cs" />
+    <Compile Include="EngineResultTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
