--- a/src/LogicEngine.Lib/LogicEngine.Lib.csproj
+++ b/src/LogicEngine.Lib/LogicEngine.Lib.csproj
@@ -54,9 +54,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine.cs" />
+    <Compile Include="EngineResult.cs" />
     <Compile Include="LogicEngineResolver.cs" />
+    <Compile Include="PreRunRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RuleBase.cs" />
+    <Compile Include="IRule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
