--- a/src/LogicEngine.Lib/LogicEngine.Lib.nuspec
+++ b/src/LogicEngine.Lib/LogicEngine.Lib.nuspec
@@ -8,6 +8,7 @@
     <owners>$author$</owners>
     <licenseUrl>https://github.com/wbsimms/LogicEngine/blob/develop/LICENSE</licenseUrl>
     <projectUrl>https://github.com/wbsimms/LogicEngine</projectUrl>
+	<iconUrl>http://wbsimms.com/wp-content/uploads/2014/10/WBS_200px-icon1.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Initial Release</releaseNotes>
