--- a/src/LogicEngine.Lib/LogicEngine.Lib.csproj
+++ b/src/LogicEngine.Lib/LogicEngine.Lib.csproj
@@ -59,6 +59,7 @@
     <Compile Include="PreRunRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRule.cs" />
+    <Compile Include="RuleCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
