--- a/src/LogicEngine.Lib.Test/packages.config
+++ b/src/LogicEngine.Lib.Test/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1506.2515" targetFramework="net451" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="Moq" version="4.5.10" targetFramework="net451" />
+  <package id="Unity" version="4.0.1" targetFramework="net451" />
 </packages>
