--- a/src/LogicEngine.Lib/LogicEngine.Lib.csproj
+++ b/src/LogicEngine.Lib/LogicEngine.Lib.csproj
@@ -56,6 +56,7 @@
     <Compile Include="RuleCollection.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="LogicEngine.Lib.nuspec" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
