--- a/src/LogicEngine.Lib.Test/LogicEngine.Lib.Test.csproj
+++ b/src/LogicEngine.Lib.Test/LogicEngine.Lib.Test.csproj
@@ -74,7 +74,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -84,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleBaseTest.cs" />
     <Compile Include="EngineResultTest.cs" />
+    <Compile Include="PrintResultsFormatterTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Example\Example.csproj">
