--- a/src/LogicEngine.Lib/LogicEngine.Lib.nuspec
+++ b/src/LogicEngine.Lib/LogicEngine.Lib.nuspec
@@ -15,4 +15,12 @@
     <copyright>Copyright 2017</copyright>
     <tags>Logic Rules Engine</tags>
   </metadata>
+  <files>
+    <file src="bin\Release\net46\LogicEngine.Lib.dll" target="lib\net46\LogicEngine.Lib.dll" />
+    <file src="bin\Release\net46\LogicEngine.Lib.pdb" target="lib\net46\LogicEngine.Lib.pdb" />
+    <file src="bin\Release\net45\LogicEngine.Lib.dll" target="lib\net45\LogicEngine.Lib.dll" />
+    <file src="bin\Release\net45\LogicEngine.Lib.pdb" target="lib\net45\LogicEngine.Lib.pdb" />
+    <file src="bin\Release\net40\LogicEngine.Lib.dll" target="lib\net40\LogicEngine.Lib.dll" />
+    <file src="bin\Release\net40\LogicEngine.Lib.pdb" target="lib\net40\LogicEngine.Lib.pdb" />
+  </files>
 </package>
